--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Coseppi Kitchen</title>
+	<title></title>
 
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -20,11 +20,12 @@
 
 </head>
 <body>
+	<div class="wrapper curved">
 	<div class="container">
 
 	<!-- Main hero unit for a primary marketing message or call to action -->
 	<div class="title-unit">
-		<h1 id="site-title">Coseppi Kitchen</h1>
+		<h1 id="site-title">Coseppi <img src="img/carrot_green.png" alt="" width='42' height='42'/> Kitchen</h1>
 		<h2 id="site-subtitle">Inclusive vegetarian cooking by Taylor Cook &amp; James Seppi</h2>
 	</div>
 
@@ -46,11 +47,11 @@
 	<hr>
 
 	<footer>
-	<p>© Company 2012</p>
+		<p>© Company 2012</p>
 	</footer>
 
-    </div>
-	
+    </div><!-- /container -->
+	</div><!-- /wrapper -->
 
 </body>
 </html>
