--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-
+	<script>
+		!function($){
+			$('#featuredCarousel').carousel();
+		}(window.jQuery);
+	</script>
 </head>
 <body>
 	<!-- Main hero unit for a primary marketing message or call to action -->
@@ -37,6 +41,37 @@
 		</div>
 		<div class="wrapper curved">
 			<div class="row">
+				<div class="span5">
+					<div id="featuredCarousel" class="carousel slide">
+					<!-- Carousel items -->
+						<div class="carousel-inner">
+							<div class="active item">
+								<img src="images/carousel_01.jpg" alt="" />
+								<div class="carousel-caption">
+									<h4></h4>
+									<p></p>
+								</div>
+							</div>
+							<div class="item">
+								<img src="images/carousel_03.jpg" alt="" />
+								<div class="carousel-caption">
+									<h4></h4>
+									<p></p>
+								</div>
+							</div>
+							<div class="item">
+								<img src="images/carousel_02.jpg" alt="" />
+								<div class="carousel-caption">
+									<h4></h4>
+									<p></p>
+								</div>
+							</div>
+						</div>
+						<!-- Carousel nav -->
+						<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+						<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+					</div>
+				</div>
 				<div class="span4">
 		  			<h2>Heading</h2>
 			  		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
