nav bar move and style

--- a/index.html
+++ b/index.html
@@ -30,16 +30,13 @@
 		<h1 id="site-title">Coseppi <img src="img/carrot_green.png" alt="" width='42' height='42'/> Kitchen</h1>
 		<h2 id="site-subtitle">Inclusive vegetarian cooking by Taylor Cook &amp; James Seppi</h2>
 	</div>
+	<div id="main-nav">
+		<a href="#">News</a>
+		<a href="#">Recipes</a>
+		<a href="#">Tips &amp; Techniques</a>
+		<a href="#">About</a>
+	</div>
 	<div class="container">
-
-		
-
-		<div class="row nav">
-			<a href="#">News</a>
-			<a href="#">Recipes</a>
-			<a href="#">Tips &amp; Techniques</a>
-			<a href="#">About</a>
-		</div>
 		<div class="wrapper curved">
 			<div class="row">
 				<div class="span5">
