--- a/index.html
+++ b/index.html
@@ -31,10 +31,21 @@
 		<h2 id="site-subtitle">Inclusive vegetarian cooking by Taylor Cook &amp; James Seppi</h2>
 	</div>
 	<div id="main-nav">
-		<a href="#">News</a>
-		<a href="#">Recipes</a>
-		<a href="#">Tips &amp; Techniques</a>
-		<a href="#">About</a>
+		<ul class="nav nav-pills">
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="#">News</a></li>
+			<li>
+				<a href="#">Recipes</a>
+				<ul class="dropdown-menu">
+					<li><a href="#">link 1</a></li>
+					<li><a href="#">link 2</a></li>
+					<li><a href="#">link 3</a></li>
+				</ul>
+			</li>
+
+			<li><a href="#">Tips &amp; Techniques</a></li>
+			<li><a href="#">About</a></li>
+		</ul>
 	</div>
 	<div class="container">
 		<div class="wrapper curved">
