--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 	</script>
 </head>
 <body>
-	<!-- Main hero unit for a primary marketing message or call to action -->
 	<div class="title-unit">
 		<h1 id="site-title">Coseppi <img src="img/carrot_green.png" alt="" width='42' height='42'/> Kitchen</h1>
 		<h2 id="site-subtitle">Inclusive vegetarian cooking by Taylor Cook &amp; James Seppi</h2>
@@ -50,7 +49,7 @@
 	<div class="container">
 		<div class="wrapper curved">
 			<div class="row">
-				<div class="span8"><!-- main area -->
+				<div class="span9"><!-- main area -->
 					<div class="row"> <!-- top row -->
 						<div class="span5">
 							<div id="featuredCarousel" class="carousel slide" data-interval="500">
@@ -80,16 +79,16 @@
 								<a class="carousel-control right" href="#featuredCarousel" data-slide="next">&rsaquo;</a>
 							</div>
 						</div>
-						<div class="span3">
+						<div class="span4">
 				  			<h3>Heading</h3>
 					  		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
 							<p><a class="btn" href="#">View details »</a></p>
 						</div>
 					</div> <!-- /top row -->
 					<div class="row">
-						<div class="span8">
+						<div class="span9">
 							<div class="row">
-								<section class="span8 article">
+								<section class="span9 article">
 									<hgroup>
 										<h3>Heading 1</h3>
 									</hgroup>
@@ -97,7 +96,7 @@
 								</section>
 							</div>
 							<div class="row">
-								<section class="span8 article">
+								<section class="span9 article">
 										<hgroup>
 											<h3>Heading</h3>
 										</hgroup>
@@ -107,7 +106,7 @@
 							</div>
 
 							<div class="row">
-								<section class="span8 article">
+								<section class="span9 article">
 										<hgroup>
 											<h3>Heading</h3>
 										</hgroup>
@@ -117,7 +116,7 @@
 							</div>
 
 							<div class="row">
-								<section class="span8 article">
+								<section class="span9 article">
 									<hgroup>
 										<h3>Heading</h3>
 									</hgroup>
@@ -129,7 +128,24 @@
 					</div>
 				</div><!-- /main content -->
 				<div class="span3"><!-- sidebar -->
-						
+					<div class="row widget-row">
+						<div class="span3">
+							<h3>Widget Title</h3>
+							<p>Widget content Widget content Widget content Widget content Widget content Widget content Widget content Widget content Widget content </p>
+						</div>
+					</div>
+					<div class="row widget-row">
+						<div class="span3">
+							<h3>Widget Title</h3>
+							<p>Widget content Widget content Widget content Widget content Widget content Widget content Widget content Widget content Widget content </p>
+						</div>
+					</div>	
+					<div class="row widget-row">
+						<div class="span3">
+							<h3>Widget Title</h3>
+							<p>Widget content Widget content Widget content Widget content Widget content Widget content Widget content Widget content Widget content </p>
+						</div>
+					</div>	
 
 				</div><!-- /sidebar -->
 			</div>
